Ajustes de navegação nos botões entrar e avançar da página principal1

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                             </div>
 
                             <div>
-                                <input id="entrar" type="submit" class="ml-2 mb-2 btn btn-primary" value="Entrar">
-                                <a id="pagina3" href="pagina3.html"></a>
+                                <a id="entrar" type="submit" class="ml-2 mb-2 btn btn-primary"
+                                    href="pagina3.html">Entrar</a>
                             </div>
                         </form>
                     </div><!--/ Fim acesse -->
@@ -97,8 +97,7 @@
                             </div>
 
                             <div class="pl-2">
-                                <input id="avancar" type="submit" class="btn btn-primary" value="Avancar">
-                                <a id="pagina2" href="pagina2.html"></a>
+                                <a id="avancar" type="submit" class="btn btn-primary" href="pagina2.html">Avançar</a>
                             </div>
                         </form>
                     </div><!--/ Fim cadastra-se -->
