Atualização da class navbar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <header><!-- Início cabecalho -->
-        <nav class="navbar navbar-expand-sm bg-success">
+        <nav class="navbar bg-success">
             <div class="container">
                 <a class="filtro" href="https://www.gov.br/saude/pt-br/sus">
                     <img class="tam1" src="img\sus.png">
