--- a/pagina2.html
+++ b/pagina2.html
@@ -23,168 +23,182 @@
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 
-<body>
-    <header><!-- Início cabecalho -->
-        <nav class="navbar navbar-expand-sm bg-success">
-            <div class="container">
-                <a class="filtro" href="https://www.gov.br/saude/pt-br/sus">
-                    <img class="tam1" src="img\sus.png">
-                </a>
-                <a class="filtro" href="https://saude.sp.gov.br/">
-                    <img class="tam2" src="img\govsp.png">
-                </a>
-                <a class="filtro" href="https://capital.sp.gov.br/web/saude">
-                    <img class="tam3" src="img\munsp.png">
-                </a>
+<header><!-- Início cabecalho -->
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #011804;">
+        <div class="container">
+            <a href="index.html" class="navbar-brand filtro">
+                <img src="img\logo.png" class="mr-2">UBS
+            </a>
+
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+
+            <div class="collapse navbar-collapse" id="nav-principal">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link filtro" href="https://www.gov.br/saude/pt-br/sus"><img src="img\sus.png"
+                                class="mr-2">SUS - Sistema Único de Saúde</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link filtro" href="https://saude.sp.gov.br/"><img src="img\govsp.png"
+                                class="mr-2">Secretaria da
+                            Saúde - SP</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link filtro" href="https://capital.sp.gov.br/web/saude"><img src="img\munsp.png"
+                                class="mr-2">Saúde - São Paulo</a>
+                    </li>
+                </ul>
             </div>
-        </nav>
-    </header><!--/ Fim cabecalho -->
+        </div>
+    </nav>
+</header><!--/ Fim cabecalho -->
 
-    <section><!-- Início seção1 -->
-        <div class="container"><!-- Início container -->
-            <h1 class="text-left text-capitalize border border-dark border-left-0 border-right-0 border-top-0 pb-3"
-                style="margin-top: 50px;"><i class="fa-regular fa-pen-to-square pr-3"></i>cadastro
-            </h1>
+<section><!-- Início seção1 -->
+    <div class="container"><!-- Início container -->
 
-            <!-- Início formulário -->
-            <div class="pt-3">
-                <h4 class="text-capitalize">formulário:</h4>
-                <p class="font-italic">*Obrigatório</p>
-                <form>
-                    <div class="form-group col-md-12">
-                        <label class="text-capitalize" for="name">nome*</label>
-                        <input class="form-control" type="text" id="name" placeholder="Digite seu nome completo">
-                    </div>
+        <h1 class="text-left text-capitalize border border-dark border-left-0 border-right-0 border-top-0 pb-3"
+            style="margin-top: 50px;"><i class="fa-regular fa-pen-to-square pr-3"></i>cadastro
+        </h1>
 
-                    <div class="form-group col-md-12">
-                        <label class="text-capitalize" for="namesocial">nome social</label>
-                        <input class="form-control" type="text" id="name social" placeholder="Nome social">
-                    </div>
+        <!-- Início formulário -->
+        <div class="pt-3">
+            <h4 class="text-capitalize">formulário:</h4>
+            <p class="font-italic">*Obrigatório</p>
+            <form>
+                <div class="form-group col-md-12">
+                    <label class="text-capitalize" for="name">nome*</label>
+                    <input class="form-control" type="text" id="name" placeholder="Digite seu nome completo">
+                </div>
 
+                <div class="form-group col-md-12">
+                    <label class="text-capitalize" for="namesocial">nome social</label>
+                    <input class="form-control" type="text" id="name social" placeholder="Nome social">
+                </div>
+
+                <div class="form-group col-md-4">
+                    <label class="text-uppercase" for="cpf">cpf*</label>
+                    <input class="form-control" type="text" id="cpf" placeholder="Digite seu CPF">
+                </div>
+
+                <div class="form-group col-md-3">
+                    <label class="text-capitalize" for="selecione">selecione*</label>
+                    <select class="form-control" name="selecione" id="selecione">
+                        <option value="">Rua</option>
+                        <option value="">Avenida</option>
+                        <option value="">Viela</option>
+                        <option value="">Outro</option>
+                    </select>
+                </div>
+
+                <div class="form-inline col-md-12">
+                    <label class="mr-2" for="">*</label>
+                    <input class="form-control col-md-6 mr-2" type="text" id="endereco"
+                        placeholder="Digite seu endereço">
+                    <label class="mr-2" for="">*</label>
+                    <input class="form-control col-md-2 mr-2" type="text" id="numero" placeholder="Número">
+                    <input class="form-control col-md-3 mr-2" type="text" id="complemento" placeholder="Complemento">
+                </div>
+
+                <div class="mt-3 form-group col-md-10">
+                    <label for="email">email</label>
+                    <input class="form-control" type="text" id="email" placeholder="Digite seu email">
+                </div>
+
+                <div class="row justify-content-start pl-3"><!--Início telefones -->
                     <div class="form-group col-md-4">
-                        <label class="text-uppercase" for="cpf">cpf*</label>
-                        <input class="form-control" type="text" id="cpf" placeholder="Digite seu CPF">
+                        <label class="text-capitalize" for="celular">celular</label>
+                        <input class="form-control" type="text" id="celular" placeholder="+5511xxxxxxx">
                     </div>
 
                     <div class="form-group col-md-3">
-                        <label class="text-capitalize" for="selecione">selecione*</label>
-                        <select class="form-control" name="selecione" id="selecione">
-                            <option value="">Rua</option>
-                            <option value="">Avenida</option>
-                            <option value="">Viela</option>
-                            <option value="">Outro</option>
-                        </select>
+                        <label class="text-capitalize" for="rtelefone">telefone residencial</label>
+                        <input class="form-control" type="text" id="rtelefone" placeholder="(11)xxxxxxx">
                     </div>
 
-                    <div class="form-inline col-md-12">
-                        <label class="mr-2" for="">*</label>
-                        <input class="form-control col-md-6 mr-2" type="text" id="endereco"
-                            placeholder="Digite seu endereço">
-                        <label class="mr-2" for="">*</label>
-                        <input class="form-control col-md-2 mr-2" type="text" id="numero" placeholder="Número">
-                        <input class="form-control col-md-3 mr-2" type="text" id="complemento"
-                            placeholder="Complemento">
+                    <div class="form-group col-md-3">
+                        <label class="text-capitalize" for="ctelefone">telefone comercial</label>
+                        <input class="form-control" type="text" id="ctelefone" placeholder="(xx)xxxxxxx">
                     </div>
+                </div><!--/ Fim telefones -->
 
-                    <div class="mt-3 form-group col-md-10">
-                        <label for="email">email</label>
-                        <input class="form-control" type="text" id="email" placeholder="Digite seu email">
+                <div class="row justify-content-start pl-3"><!-- Início senha -->
+                    <div class="form-group col-md-5">
+                        <label class="text-capitalize" for="senha">senha*</label>
+                        <input class="form-control is-valid" type="text" id="senha" placeholder="Digite sua senha">
+                        <div class="valid-feedback">
+                            Senha válida
+                        </div>
                     </div>
+                    <div class="form-group col-md-5">
+                        <label class="text-capitalize" for="csenha">confirmar senha*</label>
+                        <input class="form-control is-valid" type="text" id="csenha" placeholder="Confirme sua senha">
+                        <div class="valid-feedback">
+                            Senha válida
+                        </div>
+                    </div>
+                </div><!--/ Fim senha-->
+            </form>
+        </div>
+        <!--/ Fim formulário-->
 
-                    <div class="row justify-content-start pl-3"><!--Início telefones -->
-                        <div class="form-group col-md-4">
-                            <label class="text-capitalize" for="celular">celular</label>
-                            <input class="form-control" type="text" id="celular" placeholder="+5511xxxxxxx">
-                        </div>
-
-                        <div class="form-group col-md-3">
-                            <label class="text-capitalize" for="rtelefone">telefone residencial</label>
-                            <input class="form-control" type="text" id="rtelefone" placeholder="(11)xxxxxxx">
-                        </div>
-
-                        <div class="form-group col-md-3">
-                            <label class="text-capitalize" for="ctelefone">telefone comercial</label>
-                            <input class="form-control" type="text" id="ctelefone" placeholder="(xx)xxxxxxx">
-                        </div>
-                    </div><!--/ Fim telefones -->
-
-                    <div class="row justify-content-start pl-3"><!-- Início senha -->
-                        <div class="form-group col-md-5">
-                            <label class="text-capitalize" for="senha">senha*</label>
-                            <input class="form-control is-valid" type="text" id="senha" placeholder="Digite sua senha">
-                            <div class="valid-feedback">
-                                Senha válida
-                            </div>
-                        </div>
-                        <div class="form-group col-md-5">
-                            <label class="text-capitalize" for="csenha">confirmar senha*</label>
-                            <input class="form-control is-valid" type="text" id="csenha"
-                                placeholder="Confirme sua senha">
-                            <div class="valid-feedback">
-                                Senha válida
-                            </div>
-                        </div>
-                    </div><!--/ Fim senha-->
-                </form>
+        <!-- Início botões -->
+        <div class="mb-5 row justify-content-center pl-3">
+            <div class="col-md-6">
+                <a id="pagina1C2" href="index.html"><input id="cancelarP2" type="submit" class="btn btn-danger"
+                        value="Cancelar"></a>
             </div>
-            <!--/ Fim formulário-->
 
-            <!-- Início botões -->
-            <div class="mb-5 row justify-content-center pl-3">
-                <div class="col-md-6">
-                    <a id="pagina1C2" href="index.html"><input id="cancelarP2" type="submit" class="btn btn-danger"
-                            value="Cancelar"></a>
-                </div>
-
-                <div class="col-md-6">
-                    <input type="submit" class="btn btn-primary" data-toggle="modal" data-target="#confirmarDados"
-                        value="Confirmar">
-                </div>
+            <div class="col-md-6">
+                <input type="submit" class="btn btn-primary" data-toggle="modal" data-target="#confirmarDados"
+                    value="Confirmar">
             </div>
-            <!-- Fim botões-->
+        </div>
+        <!-- Fim botões-->
 
-            <!-- Início modal -->
-            <div class="modal fade" id="confirmarDados" tabindex="-1" role="dialog" aria-labelledby="verificarDados"
-                aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="verificarDados">Confirmar dados</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            Verifique se seus dados estão todos corretos.
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                            <a id="pagina1M2" href="index.html"><button id="salvarP2" type="button"
-                                    class="btn btn-primary">Salvar
-                                    dados</button></a>
-                        </div>
+        <!-- Início modal -->
+        <div class="modal fade" id="confirmarDados" tabindex="-1" role="dialog" aria-labelledby="verificarDados"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="verificarDados">Confirmar dados</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        Verifique se seus dados estão todos corretos.
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                        <a id="pagina1M2" href="index.html"><button id="salvarP2" type="button"
+                                class="btn btn-primary">Salvar
+                                dados</button></a>
                     </div>
                 </div>
             </div>
-            <!-- Fim modal -->
-        </div><!--/ Fim container -->
-    </section><!--/ Fim seção1 -->
+        </div>
+        <!-- Fim modal -->
+    </div><!--/ Fim container -->
+</section><!--/ Fim seção1 -->
 
 
-    <!-- JavaScript (Autenticação) -->
-    <script src="src\js\autenticacao.js"></script>
+<!-- JavaScript (Autenticação) -->
+<script src="src\js\autenticacao.js"></script>
 
-    <!-- JavaScript (Opcional) -->
-    <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+<!-- JavaScript (Opcional) -->
+<!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
