--- a/pagina3.html
+++ b/pagina3.html
@@ -25,17 +25,33 @@
 
 <body>
     <header><!-- Início cabecalho -->
-        <nav class="navbar navbar-expand-sm bg-success">
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #011804;">
             <div class="container">
-                <a class="filtro" href="https://www.gov.br/saude/pt-br/sus">
-                    <img class="tam1" src="img\sus.png">
+                <a href="index.html" class="navbar-brand filtro">
+                    <img src="img\logo.png" class="mr-2">UBS
                 </a>
-                <a class="filtro" href="https://saude.sp.gov.br/">
-                    <img class="tam2" src="img\govsp.png">
-                </a>
-                <a class="filtro" href="https://capital.sp.gov.br/web/saude">
-                    <img class="tam3" src="img\munsp.png">
-                </a>
+
+                <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
+                    <i class="fa-solid fa-bars"></i>
+                </button>
+
+                <div class="collapse navbar-collapse" id="nav-principal">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link filtro" href="https://www.gov.br/saude/pt-br/sus"><img src="img\sus.png"
+                                    class="mr-2">SUS - Sistema Único de Saúde</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link filtro" href="https://saude.sp.gov.br/"><img src="img\govsp.png"
+                                    class="mr-2">Secretaria da
+                                Saúde - SP</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link filtro" href="https://capital.sp.gov.br/web/saude"><img
+                                    src="img\munsp.png" class="mr-2">Saúde - São Paulo</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </header><!--/ Fim cabecalho -->
