Adição do rodapé e ajustes diversos.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <header><!-- Início cabecalho -->
-        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #011804;">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #011804;">
             <div class="container">
                 <a href="index.html" class="navbar-brand filtro">
                     <img src="img\logo.png" class="mr-2">UBS
@@ -57,11 +57,11 @@
         </nav>
     </header><!--/ Fim cabecalho -->
 
-    <section><!-- Início seção1 -->
+    <section style="padding-top: 125px;"><!-- Início seção1 -->
         <div class="caixa_section row align-items-center"><!-- Início caixa-section -->
             <div class="container"><!-- Início container -->
                 <div class="row align-items-center"><!-- Início apresentação-->
-                    <div class="bg-primary col-md-8 caixa_ubs pt-4 pb-4">
+                    <div class="bg-primary col-md-8 caixa_ubs mt-2 pt-4 pb-4">
                         <h1 class="display-5 text-uppercase text-center">
                             ubs - vila feliz
                         </h1>
@@ -123,8 +123,47 @@
     </section><!--/ Fim seção1 -->
 
     <section><!-- Início seção2 -->
-        <div class="caixa_section bg-primary"></div>
+        <div class="caixa_section2 bg-primary"></div>
     </section><!--/ Fim seção2 -->
+
+    <footer><!-- Início rodapé -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 pl-0">
+                    <h5>UBS - Vila Feliz</h5>
+
+                    <ul class="pl-0">
+                        <li>Rua da Felicidade, 10</li>
+                        <li>Telefone: (11) xxxx-xxxx</li>
+                    </ul>
+                </div>
+                <div class="col-md-4 pl-0">
+                    <h5>Contatos</h5>
+
+                    <ul class="pl-0">
+                        <li><i class="fa-solid fa-phone pr-2"></i>156</li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h5 class="row justify-content-end">Redes Sociais</h5>
+                    <div class="row justify-content-end">
+                        <ul>
+                            <li class="social">
+                                <a href="">
+                                    <i class="fa-brands fa-whatsapp"></i>
+                                </a>
+                            </li>
+                            <li class="social">
+                                <a href="">
+                                    <i class="fa-brands fa-square-x-twitter"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer><!--/ Fim rodapé -->
 
     <!-- JavaScript (Autenticação) -->
     <script src="src\js\autenticacao.js"></script>
