--- a/pagina2.html
+++ b/pagina2.html
@@ -24,7 +24,7 @@
 </head>
 
 <header><!-- Início cabecalho -->
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #011804;">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #011804;">
         <div class="container">
             <a href="index.html" class="navbar-brand filtro">
                 <img src="img\logo.png" class="mr-2">UBS
@@ -58,12 +58,16 @@
 <section><!-- Início seção1 -->
     <div class="container"><!-- Início container -->
 
-        <h1 class="text-left text-capitalize border border-dark border-left-0 border-right-0 border-top-0 pb-3"
-            style="margin-top: 50px;"><i class="fa-regular fa-pen-to-square pr-3"></i>cadastro
-        </h1>
+        <!---->
+        <div class="container fixed-top " style="margin-top: 126px; background: white;">
+            <h1 class="text-left text-capitalize border border-dark border-left-0 border-right-0 border-top-0"
+                style="padding-top: 125px;"><i class="fa-regular fa-pen-to-square pr-3"></i>cadastro
+            </h1>
+        </div>
+        <!---->
 
         <!-- Início formulário -->
-        <div class="pt-3">
+        <div style="margin-top: 350px;"><!---->
             <h4 class="text-capitalize">formulário:</h4>
             <p class="font-italic">*Obrigatório</p>
             <form>
@@ -140,12 +144,12 @@
                     </div>
                 </div><!--/ Fim senha-->
             </form>
-        </div>
+        </div><!---->
         <!--/ Fim formulário-->
 
         <!-- Início botões -->
         <div class="mb-5 row justify-content-center pl-3">
-            <div class="col-md-6">
+            <div class="mb-2 col-md-6">
                 <a id="pagina1C2" href="index.html"><input id="cancelarP2" type="submit" class="btn btn-danger"
                         value="Cancelar"></a>
             </div>
