--- a/pagina3.html
+++ b/pagina3.html
@@ -25,7 +25,7 @@
 
 <body>
     <header><!-- Início cabecalho -->
-        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #011804;">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #011804;">
             <div class="container">
                 <a href="index.html" class="navbar-brand filtro">
                     <img src="img\logo.png" class="mr-2">UBS
@@ -56,7 +56,7 @@
         </nav>
     </header><!--/ Fim cabecalho -->
 
-    <section><!-- Início seção1 -->
+    <section style="padding-top: 150px;"><!-- Início seção1 -->
         <div class="caixa_section"><!-- Início caixa-section -->
             <div class="container"><!-- Início container -->
                 <div class="agendamento row"><!-- Iníco agendamento -->
