Adição das demais páginas do front-end.

--- a/pagina4.html
+++ b/pagina4.html
@@ -55,45 +55,56 @@
         </nav>
     </header><!--/ Fim cabecalho -->
 
-    <section style="padding-top: 150px;"><!-- Início seção1 -->
-        <div class="caixa_section2"><!-- Início da caixa_section2 -->
-            <div class="container"><!-- Início container1 -->
-                <div class="row agendamento"><!-- Iníco da row -->
-                    <div class="col-md-7 align-self-center"><!-- Início do alinhamento vertical -->
-                        <div class="row justify-content-center"><!-- Iníco do alinhamento horizontal -->
-                            <a class="btn btn-block btn-lg btn-outline-dark" href="pagina4.html">
-                                <h2><i class="fa-regular fa-calendar-days pr-3"></i>Agendamento</h2>
-                            </a>
-                        </div><!--/ Fim do alinhamento horizontal -->
-                    </div><!--/ Fim do alinhamento vertical -->
+    <section><!-- Início seção1 -->
+        <div class="container pt-3" style="margin-top: 130px;"><!-- Início container1 -->
+            <div class="row border border-dark border-top-0 border-left-0 border-right-0"><!-- Iníco da row-->
+                <div class="col-md-8"><!---->
+                    <h1 class="text-capitalize" style="padding-top: 100px;">
+                        <i class="fa-regular fa-calendar-days pr-3"></i>Agendamento
+                    </h1>
+                </div><!---->
 
-                    <div class="col-md-4 mt-2 align-self-start"><!-- Início do alinhamento vertial -->
-                        <div class="row justify-content-end"><!-- Início do alinhamento horizontal -->
-                            <div class="dropdown"><!-- Início do menu dropdown -->
-                                <a class="btn text-dark dropdown-toggle" href="" data-toggle="dropdown">Olá, <span
-                                        class="font-weight-bold">Usuário</span></a>
-                                <div class="dropdown-menu">
-                                    <a class="btn text-dark dropdown-item" href="pagina7.html"><i
-                                            class="fa-regular fa-calendar-days pr-2"></i>Meus Agendamentos</a>
-                                    <a class="btn text-dark dropdown-item" href="pagina8.html"><i
-                                            class="fa-regular fa-pen-to-square pr-2"></i>Meus Dados</a>
-                                    <a class="btn text-dark dropdown-item" href="pagina9.html"><i
-                                            class="fa-solid fa-key pr-2"></i>Alterar
-                                        Senha</a>
-                                    <a class="btn text-dark dropdown-item" href="index.html"><i
-                                            class="fa-solid fa-right-from-bracket pr-2"></i>Sair</a>
-                                </div>
-                            </div><!--/ Fim do menu dropdown -->
-                        </div><!--/ Fim do alinhamento horizontal -->
-                    </div><!--/ Fim do alinhamento vertical -->
-                </div><!--/ Fim da row -->
-            </div><!-- Fim container1 -->
-        </div><!--/ Fim da caixa_section2 -->
+                <!-- Início menu-->
+                <div class="col-md-4 mt-2 row align-self-start justify-content-end">
+                    <div class="dropdown"><!-- Início dropdown -->
+                        <a class="btn text-dark dropdown-toggle" href="" data-toggle="dropdown">Olá, <span
+                                class="font-weight-bold">Usuário</span></a>
+                        <div class="dropdown-menu">
+                            <a class="btn text-dark dropdown-item" href="pagina3.html"><i
+                                    class="fa-regular fa-calendar-days pr-2"></i>Agendamento</a>
+                            <a class="btn text-dark dropdown-item" href="index.html"><i
+                                    class="fa-solid fa-right-from-bracket pr-2"></i>Sair</a>
+                        </div>
+                    </div><!--/ Fim dropdown -->
+                </div><!--/ Fim menu -->
+            </div><!--/ Fim da row -->
+        </div><!--/ Fim container1 -->
+
+        <!-- Início container2 -->
+        <div class="container border border-dark border-top-0 border-left-0 border-right-0">
+            <h2 class="text-sm-center pt-4 pb-4">Informe a data de sua preferência</h2>
+        </div><!--/ Fim container2 -->
+
+        <div class="container"><!-- Início container3 -->
+            <div class="row justify-content-center">
+                <div class="calendario border border-dark col-md-5 m-5">
+                    Calendário
+                </div>
+            </div>
+        </div><!-- Fim container3 -->
+
+        <div class="container"><!-- Iníco container4 -->
+            <div class="row justify-content-center"><!-- Início da row -->
+                <div class="row col-md-5 justify-content-center">
+                    <a id="" href="pagina3.html"><button class="btn btn-primary mt-4 mb-4">Voltar</button></a>
+                </div>
+
+                <div class="row col-md-5 justify-content-center">
+                    <a id="" href="pagina5.html"><Button class="btn btn-primary mt-4 mb-4">Avançar</Button></a>
+                </div>
+            </div><!-- Fim da row -->
+        </div><!--/ Fim container4 -->
     </section><!--/ Fim seção1 -->
-
-    <section><!-- Início seção2 -->
-        <div class="caixa_section bg-primary"></div>
-    </section><!--/ Fim seção2 -->
 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
