--- a/index.html
+++ b/index.html
@@ -39,17 +39,16 @@
                 <div class="collapse navbar-collapse" id="nav-principal">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link filtro" href="https://www.gov.br/saude/pt-br/sus"><img src="img\sus.png"
-                                    class="mr-2">SUS - Sistema Único de Saúde</a>
+                            <a class="nav-link filtro" href=""><img src="img\sus.png" class="mr-2">SUS - Sistema Único
+                                de Saúde</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link filtro" href="https://saude.sp.gov.br/"><img src="img\govsp.png"
-                                    class="mr-2">Secretaria da
+                            <a class="nav-link filtro" href=""><img src="img\govsp.png" class="mr-2">Secretaria da
                                 Saúde - SP</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link filtro" href="https://capital.sp.gov.br/web/saude"><img
-                                    src="img\munsp.png" class="mr-2">Saúde - São Paulo</a>
+                            <a class="nav-link filtro" href=""><img src="img\munsp.png" class="mr-2">Saúde - São
+                                Paulo</a>
                         </li>
                     </ul>
                 </div>
@@ -58,9 +57,9 @@
     </header><!--/ Fim cabecalho -->
 
     <section style="padding-top: 125px;"><!-- Início seção1 -->
-        <div class="caixa_section row align-items-center"><!-- Início caixa-section -->
-            <div class="container"><!-- Início container -->
-                <div class="row align-items-center"><!-- Início apresentação-->
+        <div class="caixa_section row align-items-center"><!-- Início da caixa_section -->
+            <div class="container"><!-- Início container1 -->
+                <div class="row align-items-center"><!-- Início da row1 -->
                     <div class="bg-primary col-md-8 caixa_ubs mt-2 pt-4 pb-4">
                         <h1 class="display-5 text-uppercase text-center">
                             ubs - vila feliz
@@ -74,9 +73,9 @@
                             </button>
                         </div>
                     </div>
-                </div><!--/ Fim apresentação -->
+                </div><!--/ Fim da row1 -->
 
-                <div class="row align-items-center justify-content-end"><!-- Início auntenticação-->
+                <div class="row align-items-center justify-content-end"><!-- Início row2 -->
                     <div class="autenticacao caixa_form col-md-4 border border-dark mt-3"><!-- Início acesse -->
                         <p class="lead font-italic">Acesse com seu CPF e Senha:</p>
                         <form>
@@ -117,9 +116,9 @@
                             </div>
                         </form>
                     </div><!--/ Fim cadastra-se -->
-                </div><!--/ Fim autenticação -->
-            </div><!--/ Fim container -->
-        </div><!--/ Fim caixa-section -->
+                </div><!--/ Fim da row2 -->
+            </div><!--/ Fim container1 -->
+        </div><!--/ Fim caixa_section -->
     </section><!--/ Fim seção1 -->
 
     <section><!-- Início seção2 -->
@@ -127,8 +126,8 @@
     </section><!--/ Fim seção2 -->
 
     <footer><!-- Início rodapé -->
-        <div class="container">
-            <div class="row">
+        <div class="container"><!-- Início container1 -->
+            <div class="row"><!-- Início da row-->
                 <div class="col-md-4 pl-0">
                     <h5>UBS - Vila Feliz</h5>
 
@@ -141,7 +140,7 @@
                     <h5>Contatos</h5>
 
                     <ul class="pl-0">
-                        <li><i class="fa-solid fa-phone pr-2"></i>156</li>
+                        <li><i class="fa-solid fa-phone pr-2"></i>---</li>
                     </ul>
                 </div>
                 <div class="col-md-4">
@@ -161,8 +160,8 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-        </div>
+            </div><!--/ Fim da row -->
+        </div><!--/ Fim container1 -->
     </footer><!--/ Fim rodapé -->
 
     <!-- JavaScript (Opcional) -->
