--- a/pagina9.html
+++ b/pagina9.html
@@ -109,7 +109,7 @@
                 <div class="col-md-7">
                     <div class="row justify-content-end">
                         <a id="" href="pagina3.html"><button class="btn btn-secondary m-4">Cancelar</button></a>
-                        <a id="" href="pagina3.html"><Button class="btn btn-primary mt-4 mb-4">Confirmar</Button></a>
+                        <a id="" href="index.html"><Button class="btn btn-primary mt-4 mb-4">Confirmar</Button></a>
                     </div>
                 </div>
             </div>
