Adição do calendário

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         crossorigin="anonymous"></script>
 
     <!-- JavaScript (Autenticação) -->
-    <script src="src\js\autenticacao.js"></script>
+    <script src="src\js\pagina1-js.js"></script>
 </body>
 
 </html>
